--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <h1 class="app-name">Subscriptions Tracking App</h1>
-  <p id="message"></p>
+  <h1 class="app-name">Subscriptions Tracking</h1>
+
   <!-- making landing page -->
   <section class="container">
     <div class="messages-div top-third">
@@ -29,42 +29,42 @@
       <!-- sign up -->
       <div class="flex-container">
         <div class="signUp-div left-third flex-child">
-          <h4 class="welcome">New User? Let's Create An Account
-            </h3>
-            <button type="button" data-toggle="modal" data-target="#signUpModal" data-whatever="">GET STARTED</button>
+          <h5 class="welcome">New User?
+          </h5>
+          <button class="signUp-hover" type="button" data-toggle="modal" data-target="#signUpModal" data-whatever="">GET STARTED</button>
 
-            <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="signUpModalLabel">Sign Up</h5>
-                    <button type="submit" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <form id="sign-up">
-                      <div class="form-group">
-                        <label for="email-signUp" class="col-form-label">Your Email:</label>
-                        <input name="credentials[email]" type="text" class="form-control" id="email-signUp" placeholder="Enter email" required>
-                      </div>
-                      <div class="form-group">
-                        <label for="password-signUp" class="col-form-label">Your Password:</label>
-                        <input name="credentials[password]" type="password" class="form-control" id="password-signUp" placeholder="Enter Password" required>
-                      </div>
-                      <div class="form-group">
-                        <label for="password_confirmation" class="col-form-label">Confirm Password:</label>
-                        <input name="credentials[password_confirmation]" type="password" class="form-control" id="password_confirmation" placeholder="Confirm Password" required>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" data-dismiss="modal">Close</button>
-                        <button type="submit">Sign Up</button>
-                      </div>
-                    </form>
-                  </div>
+          <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="signUpModalLabel">Sign Up</h5>
+                  <button type="submit" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form id="sign-up">
+                    <div class="form-group">
+                      <label for="email-signUp" class="col-form-label">Your Email:</label>
+                      <input name="credentials[email]" type="text" class="form-control" id="email-signUp" placeholder="Enter email" required>
+                    </div>
+                    <div class="form-group">
+                      <label for="password-signUp" class="col-form-label">Your Password:</label>
+                      <input name="credentials[password]" type="password" class="form-control" id="password-signUp" placeholder="Enter Password" required>
+                    </div>
+                    <div class="form-group">
+                      <label for="password_confirmation" class="col-form-label">Confirm Password:</label>
+                      <input name="credentials[password_confirmation]" type="password" class="form-control" id="password_confirmation" placeholder="Confirm Password" required>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" data-dismiss="modal">Close</button>
+                      <button type="submit">Sign Up</button>
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
+          </div>
         </div>
 
         <!-- sign in -->
@@ -74,9 +74,9 @@
         <button id="modal-signUp" type="button" class="btn btn-primary" data-toggle="modal" data-target="#signUpModal" data-whatever="">Create Account</button>
       </div> -->
         <div class="signIn-div right-third flex-child">
-          <h4 class="welcome">Already Have An Account?
-          </h4>
-          <button type="button" data-toggle="modal" data-target="#signInModal" data-whatever="">LOG IN</button>
+          <h5 class="welcome">Already Signed Up?
+          </h5>
+          <button class="signIn-hover" type="button" data-toggle="modal" data-target="#signInModal" data-whatever="">LOG IN</button>
 
           <div class="modal fade" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -111,12 +111,15 @@
     </div>
   </section>
 
+  <p id="message"></p>
+  <!-- adding picture -->
+  <img class="img-head" src="https://images.unsplash.com/photo-1523634921619-37ce98c1877f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80" alt="organize-image">
 
   <!-- authenticated -->
   <div class="authenticated">
     <p id="sub-message"></p>
     <div class="navbar fixed-top navbar-light bg-light justify-content-end">
-      <a class="navbar-brand" href="#">TRACKING APP</a>
+      <a id="navBrand" class="navbar-brand" href="#">TRACKING APP</a>
       <!-- search box aka get one sub -->
       <form class="form-inline" id="get-sub">
         <input class="sub-input form-control mr-sm-2" type="search" name=subscription[id] placeholder="Search By ID" aria-label="Search" required>
