Finished styling in ui

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <!-- sign up -->
       <div class="flex-container">
         <div class="signUp-div left-third flex-child">
-          <h5 class="welcome">New User?
-          </h5>
+          <h4 class="welcome">New User?
+          </h4>
           <button class="signUp-hover" type="button" data-toggle="modal" data-target="#signUpModal" data-whatever="">GET STARTED</button>
 
           <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModalLabel" aria-hidden="true">
@@ -74,9 +74,9 @@
         <button id="modal-signUp" type="button" class="btn btn-primary" data-toggle="modal" data-target="#signUpModal" data-whatever="">Create Account</button>
       </div> -->
         <div class="signIn-div right-third flex-child">
-          <h5 class="welcome">Already Signed Up?
-          </h5>
-          <button class="signIn-hover" type="button" data-toggle="modal" data-target="#signInModal" data-whatever="">LOG IN</button>
+          <h4 class="welcome">Already Signed Up?
+          </h4>
+          <button class="signIn-hover" type="button" data-toggle="modal" data-target="#signInModal" data-whatever="">SIGN IN</button>
 
           <div class="modal fade" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -131,6 +131,7 @@
           </form>
         </div>
         <div class="nav navbar">
+          <p class="user-name"></p>
           <button id="modal-changePw" type="button" class="change-pw" data-toggle="modal" data-target="#changePwModal" data-whatever="">Change Password</button>
           <button id="sign-out" type="submit">Sign Out</button>
         </div>
