Added README content - also added some new icons in html file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <h1 class="app-name">Subscriptions Tracking</h1>
+  <h1 class="app-name"><i class="fas fa-ghost"></i> Subscriptions Tracking</h1>
 
   <!-- making landing page -->
   <section class="container">
@@ -123,7 +123,7 @@
     <nav class="navbar fixed-top navbar-light bg-light justify-content-end">
       <div class="container-fluid">
         <div class="nav navbar">
-          <a id="navBrand" class="navbar-brand" href="#"><i class="fab fa-angellist"></i> TRACKING APP</a>
+          <a id="navBrand" class="navbar-brand" href="https://hanvnguyen94.github.io/subscriptions-tracking-app-client"><i class="fab fa-angellist"></i> TRACKING APP</a>
           <!-- search box aka get one sub -->
           <form class="form-inline" id="get-sub">
             <input class="sub-input form-control mr-sm-2" type="search" name=subscription[id] placeholder="Search By ID" aria-label="Search" required>
