modified nav brand

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div class="container-fluid">
         <div class="nav navbar">
           <a id="navBrand" class="navbar-brand"
-            href="https://hanvnguyen94.github.io/subscriptions-tracking-app-client"><i class="fab fa-angellist"></i>
+            href="#"><i class="fab fa-angellist"></i>
             TRACKING APP</a>
           <!-- search box aka get one sub -->
           <form class="form-inline" id="get-sub">
